# shabdakosh

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  cyrius.cyml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs  hotpath.bcyr
data/: cmudict-5k.txt
docs/: benchmarks.md
docs/adr/: 001-hashbrown-for-base-dictionary.md  002-two-layer-lookup.md  003-varna-feature-gate.md  004-cyrius-port-decisions.md  README.md
docs/architecture/: overview.md
docs/audit/: 2026-07-05-audit.md
docs/development/: backlog.md  roadmap.md  state.md
docs/guides/: consuming-the-distlib.md  getting-started.md  usage.md
examples/: basic.rs
lib/: bayan.cyr  goonj.cyr  hisab.cyr  naad.cyr  svara.cyr  syscalls_aarch64_linux.cyr  varna.cyr
programs/: gen_cmudict.cyr
rust-old/: test_send_sync
rust-old/benches/: benchmarks.rs
rust-old/examples/: basic.rs
rust-old/src/: arpabet.rs  error.rs  ipa.rs  notation.rs  wasm.rs
rust-old/src/dictionary/: coverage.rs  detect.rs  entry.rs  g2p.rs  heteronym.rs  lazy.rs  mod.rs  static_dict.rs  stream.rs  syllable.rs  trie.rs  validate.rs
rust-old/src/dictionary/format/: pls.rs
rust-old/supply-chain/: config.toml
rust-old/tests/: integration.rs
scripts/: version-bump.sh
src/: arpabet.cyr  arpabet.rs  error.cyr  error.rs  ffi.rs  ipa.cyr  ipa.rs  lib.rs  main.cyr  notation.cyr  wasm.cyr
src/dictionary/: _cmudict_data.cyr  _cmudict_data_0.cyr  _cmudict_data_1.cyr  cmudict.cyr  coverage.cyr  coverage.rs  detect.cyr  entry.cyr  entry.rs  format.rs  g2p.cyr  g2p.rs  heteronym.cyr  heteronym.rs  lazy.cyr  lexicon.cyr  mod.cyr  mod.rs  morphology.cyr  morphology.rs  static_dict.cyr  static_dict.rs  stream.cyr  syllable.cyr  trie.cyr  trie.rs  validate.cyr  validate.rs
src/dictionary/format/: binary.cyr  binary.rs  json.cyr  mod.cyr  mod.rs  pls.cyr  pls.rs  ssml.cyr  ssml.rs
tests/: arpabet.tcyr  binary.tcyr  cmudict.tcyr  coverage.tcyr  detect.tcyr  dict.tcyr  entry.tcyr  error.tcyr  format.tcyr  g2p.tcyr  heteronym.tcyr  integration.rs  ipa.tcyr  json.tcyr  lazy.tcyr  lexicon.tcyr  morphology.tcyr  notation.tcyr  pls.tcyr  shabdakosh.bcyr  shabdakosh.fcyr  shabdakosh.tcyr  ssml.tcyr  static_dict.tcyr  stream.tcyr  syllable.tcyr  trie.tcyr  validate.tcyr  wasm.tcyr
