[package]
name = "shabdakosh"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "shabdakosh — Pronunciation dictionary with ARPABET/CMUdict support for svara phonemes"
homepage = "https://github.com/MacCracken/shabdakosh"
repository = "https://github.com/MacCracken/shabdakosh"
readme = "README.md"
documentation = "https://docs.rs/shabdakosh"
keywords = ["dictionary", "pronunciation", "arpabet", "cmudict", "phoneme"]
categories = ["text-processing"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]
build = "build.rs"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
svara = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std"]
full = ["std", "json"]
std = ["serde/std", "svara/std", "thiserror/std"]
json = ["dep:serde_json"]

[[bench]]
name = "benchmarks"
harness = false
